fix: modal window hide overflow

--- a/style.css
+++ b/style.css
@@ -835,6 +835,8 @@ body {
   font-size: 1.5rem;
   font-weight: 300;
   margin: 10px 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .btn-close {
